beta version preparing

--- a/templates/display_posts_navigation.html
+++ b/templates/display_posts_navigation.html
@@ -1,2 +1,2 @@
-<h5 class="capitalize">[TITLE]</h5>
+<a href="https://[BLOG_URL]"><h5 class="capitalize">[TITLE]</h5></a>
 <p><a href="index.php?id=[ID]&mode=edit">Edit</a> | <a href="index.php?id=[ID]&mode=delete" ng-click="delete([ID])">Delete</a></p>
