--- a/css/style_default.css
+++ b/css/style_default.css
@@ -23,10 +23,11 @@ code {
 
 .description-box {
   border: 1px solid #eee;
-  border-left: 15px solid #eee;
+  border-left: 15px solid rgba(0,0,0,0.5);
   font-size: 1rem;
   width: 100%;
-  height: 100%;
+  height: 50%;
+  font-style: normal;
 
 }
 
@@ -35,11 +36,25 @@ code {
 }
 
 .title-text {
-	font-size: 20px; border: 0px solid black; border-left: 15px solid #eee ;
+	font-size: 20px; border: 0px solid black; border-left: 15px solid black ;
 }
 
 .delete-showcase {
 	border-left: 30px solid #eee;
 	padding-left: 10px;
 	padding-top: 10px;
+}
+
+@font-face {
+	font-family: "ubuntu-l";
+	src: url("../fonts/ubuntu.ttf");
+}
+
+html,body {
+	font-family: ubuntu-l;
+}
+
+.medium-editor-placeholder:after { 
+	font-style: normal;
+	font-family: ubuntu-l;
 }
