--- a/templates/setup.html
+++ b/templates/setup.html
@@ -14,7 +14,11 @@
     </nav>
     <div class="col-md-8 col-lg-8 col-sm-8 offset-md-2 offset-sm-2 offset-lg-2">
     <br/><br/><br/><br/>
-        <h3>Please enter your github access token </h3>
+        <h4>Enter your github user access token with scope : public repo, please see below video if you dont know to get the token</h4>
+        <br/>
+        <div class="text-center">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GKGUDhaStE0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
       	<br/><br/>
         <form method="POST">
       	<input type="text" name="access_token" placeholder="Enter the user access token" style="width: 100%;" class="form-control">
